// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="entry-votes"
>
  <span
    className="inner-btn"
    onClick={[Function]}
    title="10 Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    10
  </span>
</div>
`;

exports[`(2) No votes 1`] = `
<div
  className="entry-votes"
>
  <span
    className="inner-btn no-data"
    title="No Votes"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M16 17V19H2V17S2 13 9 13 16 17 16 17M12.5 7.5A3.5 3.5 0 1 0 9 11A3.5 3.5 0 0 0 12.5 7.5M15.94 13A5.32 5.32 0 0 1 18 17V19H22V17S22 13.37 15.94 13M15 4A3.39 3.39 0 0 0 13.07 4.59A5 5 0 0 1 13.07 10.41A3.39 3.39 0 0 0 15 11A3.5 3.5 0 0 0 15 4Z"
        fill="currentColor"
      />
    </svg>
     
    0
  </span>
</div>
`;

exports[`(3) Default render of detail 1`] = `
<div
  className="votes-dialog-content"
>
  <div
    className="spinner-grow text-primary"
  />
</div>
`;

exports[`(4) Render of detail with votes 1`] = `
<div
  className="votes-dialog-content"
>
  <div
    className="table-responsive"
  >
    <div
      className="react-bootstrap-table"
    >
      <table
        className="table"
      >
        <thead>
          <tr>
            <th
              tabIndex={0}
            >
              Voter
            </th>
            <th
              aria-label="Reward sort desc"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Reward
              <span
                className="table-sort-caret active"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
            <th
              aria-label="Percent sortable"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Percent
              <span
                className="table-sort-caret"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
                 
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
            <th
              aria-label="Time sortable"
              className="sortable"
              onClick={[Function]}
              onKeyUp={[Function]}
              tabIndex={0}
            >
              Time
              <span
                className="table-sort-caret"
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,8.58L12,13.17L16.59,8.58L18,10L12,16L6,10L7.41,8.58Z"
                    fill="currentColor"
                  />
                </svg>
                 
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user1"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user1/avatar/medium)",
                    }
                  }
                />
                 
                user1
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 109.122
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user2"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user2/avatar/medium)",
                    }
                  }
                />
                 
                user2
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 7.225
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user7"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user7/avatar/medium)",
                    }
                  }
                />
                 
                user7
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 4.080
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user4"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user4/avatar/medium)",
                    }
                  }
                />
                 
                user4
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 2.309
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user8"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user8/avatar/medium)",
                    }
                  }
                />
                 
                user8
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 1.765
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user9"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user9/avatar/medium)",
                    }
                  }
                />
                 
                user9
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 0.446
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user5"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user5/avatar/medium)",
                    }
                  }
                />
                 
                user5
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 0.077
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
          <tr
            className={null}
            style={Object {}}
          >
            <td
              className="voter-cell"
            >
              <a
                className="account"
                href="/@user3"
                onClick={[Function]}
              >
                <span
                  className="user-avatar small"
                  onClick={[Function]}
                  role="none"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.esteem.app/u/user3/avatar/medium)",
                    }
                  }
                />
                 
                user3
              </a>
            </td>
            <td
              className="reward-cell"
            >
              $ 0.064
            </td>
            <td
              className="percent-cell"
            >
              0.0 %
            </td>
            <td
              className="time-cell"
            >
              <span
                title="Saturday, January 1, 2000 2:00 AM"
              >
                20 years ago
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      className="row react-bootstrap-table-pagination"
    >
      <div
        className="col-md-6 col-xs-6 col-sm-6 col-lg-6"
      />
      <div
        className="react-bootstrap-table-pagination-list col-md-6 col-xs-6 col-sm-6 col-lg-6"
      >
        <ul
          className="pagination react-bootstrap-table-page-btns-ul"
        >
          <li
            className="active page-item"
            title="1"
          >
            <a
              className="page-link"
              href="#"
              onClick={[Function]}
            >
              1
            </a>
          </li>
          <li
            className="page-item"
            title="2"
          >
            <a
              className="page-link"
              href="#"
              onClick={[Function]}
            >
              2
            </a>
          </li>
          <li
            className="page-item"
            title="next page"
          >
            <a
              className="page-link"
              href="#"
              onClick={[Function]}
            >
              &gt;
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
